# qlib_ext_se

./: .gitignore  Dockerfile  INSTRUCTIONS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
ext/qlib-ext-se/: README.md
ext/qlib-ext-se/src/qlib_ext_se/: __init__.py
ext/qlib-ext-se/src/qlib_ext_se/_cache/: xsto_2025-06-18_2025-06-18.csv  xsto_2025-06-19_2025-06-19.csv  xsto_2025-06-23_2025-06-23.csv
ext/qlib-ext-se/tests/: test_calendar_dates.py
src/qlib_ext_se/: calendar.py  compat.py  config.py  defaults.py  region.py
src/qlib_ext_se/data/: xsto_trading_days_fallback.csv
tests/: test_dataset_smoke.py  test_register_basic.py
